# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.

cmake_minimum_required (VERSION 3.8)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

add_compile_definitions(_CRT_SECURE_NO_WARNINGS)

project ("UriOnlineJudge")

# Include sub-projects.
add_subdirectory ("1000")
add_subdirectory ("1001")
add_subdirectory ("1002")
add_subdirectory ("1003")
add_subdirectory ("1004")
add_subdirectory ("1005")
add_subdirectory ("1006")
add_subdirectory ("1007")
add_subdirectory ("1008")
add_subdirectory ("1009")
add_subdirectory ("1010")
add_subdirectory ("1011")
add_subdirectory ("1012")
add_subdirectory ("1013")
add_subdirectory ("1014")
add_subdirectory ("1015")
add_subdirectory ("1016")
add_subdirectory ("1017")
add_subdirectory ("1018")
add_subdirectory ("1019")
add_subdirectory ("1020")
add_subdirectory ("1021")
add_subdirectory ("1022")
add_subdirectory ("1023")
add_subdirectory ("1024")
add_subdirectory ("1028")
add_subdirectory ("1029")
add_subdirectory ("1035")
add_subdirectory ("1036")
add_subdirectory ("1037")
add_subdirectory ("1038")
add_subdirectory ("1040")
add_subdirectory ("1041")
add_subdirectory ("1042")
add_subdirectory ("1043")
add_subdirectory ("1044")
add_subdirectory ("1045")
add_subdirectory ("1046")
add_subdirectory ("1047")
add_subdirectory ("1048")
add_subdirectory ("1049")
add_subdirectory ("1050")
add_subdirectory ("1051")
add_subdirectory ("1052")
add_subdirectory ("1059")
add_subdirectory ("1060")
add_subdirectory ("1061")
add_subdirectory ("1064")
add_subdirectory ("1065")
add_subdirectory ("1066")
add_subdirectory ("1067")
add_subdirectory ("1070")
add_subdirectory ("1071")
add_subdirectory ("1072")
add_subdirectory ("1073")
add_subdirectory ("1074")
add_subdirectory ("1075")
add_subdirectory ("1076")
add_subdirectory ("1078")
add_subdirectory ("1079")
add_subdirectory ("1080")
add_subdirectory ("1082")
add_subdirectory ("1084")
add_subdirectory ("1087")
add_subdirectory ("1088")
add_subdirectory ("1089")
add_subdirectory ("1091")
add_subdirectory ("1095")
add_subdirectory ("1096")
add_subdirectory ("1097")
add_subdirectory ("1099")
add_subdirectory ("1100")
add_subdirectory ("1110")
add_subdirectory ("1113")
add_subdirectory ("1114")
add_subdirectory ("1115")
add_subdirectory ("1116")
add_subdirectory ("1117")
add_subdirectory ("1127")
add_subdirectory ("1128")
add_subdirectory ("1129")
add_subdirectory ("1131")
add_subdirectory ("1132")
add_subdirectory ("1134")
add_subdirectory ("1142")
add_subdirectory ("1143")
add_subdirectory ("1144")
add_subdirectory ("1148")
add_subdirectory ("1149")
add_subdirectory ("1150")
add_subdirectory ("1151")
add_subdirectory ("1152")
add_subdirectory ("1153")
add_subdirectory ("1154")
add_subdirectory ("1157")
add_subdirectory ("1158")
add_subdirectory ("1161")
add_subdirectory ("1168")
add_subdirectory ("1188")
add_subdirectory ("1190")
add_subdirectory ("1222")
add_subdirectory ("1228")
add_subdirectory ("1234")
add_subdirectory ("1237")
add_subdirectory ("1238")
add_subdirectory ("1243")
add_subdirectory ("1246")
add_subdirectory ("1254")
add_subdirectory ("1256")
add_subdirectory ("1271")
add_subdirectory ("1273")
add_subdirectory ("1276")
add_subdirectory ("1278")
add_subdirectory ("1286")
add_subdirectory ("1288")
add_subdirectory ("1310")
add_subdirectory ("1312")
add_subdirectory ("1329")
add_subdirectory ("1332")
add_subdirectory ("1340")
add_subdirectory ("1351")
add_subdirectory ("1362")
add_subdirectory ("1364")
add_subdirectory ("1471")
add_subdirectory ("1487")
add_subdirectory ("1542")
add_subdirectory ("1548")
add_subdirectory ("1552")
add_subdirectory ("1559")
add_subdirectory ("1560")
add_subdirectory ("1607")
add_subdirectory ("1608")
add_subdirectory ("1621")
add_subdirectory ("1661")
add_subdirectory ("1719")
add_subdirectory ("1732")
add_subdirectory ("1774")
add_subdirectory ("1781")
add_subdirectory ("1790")
add_subdirectory ("1855")
add_subdirectory ("1912")
add_subdirectory ("1931")
add_subdirectory ("2132")
add_subdirectory ("2157")
add_subdirectory ("2173")
add_subdirectory ("2355")
add_subdirectory ("2356")
add_subdirectory ("2361")
add_subdirectory ("2532")
add_subdirectory ("2545")
add_subdirectory ("2588")
add_subdirectory ("2792")
